--- a/eco-centennial-paper.tex
+++ b/eco-centennial-paper.tex
@@ -40,17 +40,27 @@ The climate is changing and there is a lot of activity in ecology trying to pred
 We need to study the physiological and phenotypic responses of species across their geographic ranges. More experiments and replicated field data are needed, and less speculative modeling based on presence-only records. Proteomic and transciptomic studies get us closer to understanding the range of  potential responses to climate change; studies of genetic variation in alleles that code for important molecules like heat shock protein will let us estimate the potential for an evolutionary response. Discuss a few exemplary studies from different labs. Although ecologists are starting to use these tools, most recent studies still do not sample across geographic ranges, replicate properly, or even include benchmark testing of the reliability of sequence alignments. Experimental manipulations in the field and the lab, field transplant experiments, and measurements of gene expression from populations collected across the geographic range of a species are the next steps to take.
 
 We need to study the physiological and phenotypic responses of species across their geographic ranges. More experiments and replicated field data are needed, and less speculative modeling based on presence-only records. Proteomic and transciptomic studies get us closer to understanding the range of  potential responses to climate change; studies of genetic variation in alleles that code for important molecules like heat shock protein will let us estimate the potential for an evolutionary response. Discuss a few exemplary studies from different labs. Although ecologists are starting to use these tools, most recent studies still do not sample across geographic ranges, replicate properly, or even include benchmark testing of the reliability of sequence alignments. Experimental manipulations in the field and the lab, field transplant experiments, and measurements of gene expression from populations collected across the geographic range of a species are the next steps to take. 
-
-\Ncom{Hi John. In the spirit of \LaTeX WYSIWYM writing, I suggest we postpone formatting until near the very end.}
-
-Instead, let's get some text developed and start populating the bibliography. I have set up 4 new commands that act like a poor man's track changes. When you want to add or edit something, just copy the entire paragraph, bracket it with Jtex \Jtxt{edited text here} and make your edits. If you are making comments, use Jcom \Jcom{comments here}. Your comments and edits will show up in blue, and mine will show up in red. Each round of changes, I will be adding red text. When you get it, you can accept changes and decolorize the red, then add your own new material (text, edits, comments). This is how we used to do it with highlighting in the days before track changes. Let's see how it works.
- 
-\Ncom{Can you look into how to set up a bibliography in Gummi? Thanks!}
-\Jcom{Done! See below}
-
 \end{abstract}
 % main text
 \section*{Species Distribution Modeling}
+\Ncom{Hi John. Here is my new text, which I still need to seed with references. See how this reads as a lead in to discussion of the genetics work.}
+
+\Ntxt{A growing body of evidence suggests that ongoing climate change is affecting populations and assemblages from local () to biogeographic () scales. Such evidence includes shifts in plant phenology (), the unseasonably early onset of migration () and other forms of animal activity(), historically documented expansions () and contractions () of species geographic range boundaries, and small scale changes in abundance (), activity (), phenology (), and species composition () in response to experimental warming treatments ().}
+
+\Ntxt{The collective evidence for such changes is compelling (). However, successfully forecasting and modeling future range shifts based on  climate change projections is a difficult scientific challenge for the next century (). So far, the most successful forecasting paradigm has used species presence records () to model occurrence probabilities as a function of contemporary climate variables (). When projected onto geographic space, these models generate contour maps of the probability of species occurrence in different places. When extrapolated to future climate scenarios, these models forecast potential geographic range shifts (), with some species expanding their ranges as they move poleward () and towards higher elevations (), and others contracting towards extinction () because of a mismatch between future climates and their estimated climatic niches (). Early research focused on consequences for high-latitude assemblages (), where the absolute changes in temperature and climate have been pronounced (). However, recent studies have suggested  that tropical plants and animals may be even more vulnerable to extinction (),  both because they have evolved narrower temperature tolerances (), and because of a "tropical vacuum" () that will be created by the emergence of "no analog" climates in the warmest spots on the planet ().}
+
+\Ntxt{This existing paradigm is largely data driven: geo-referenced museum records (), range maps (), species lists (), and the results of surveys by ecologists (), land managers (), and citizen scientists () have generated many sets of species occurrence records. Unfortunately, most of these data are "presence-only" and do not include records of species absences, which creates a special statistical challenge (). Along with species presence data, GIS layers of modeled climate variables are widely available on the internet (), and  can be easily downloaded and interpolated to different spatial scales and grain sizes (). Climate data and species occurrence records can be readily combined in MaxEnt (), a comprehensive open-source software application with a convenient graphical interface for entering data, creating forecasting models, and visualizing the results. The availability of MaxEnt software, GIS layers of environmental data, and species occurrence records have fueled a major publication growth industry over the past decade in species distribution forecasting models.}
+
+\Ntxt{But there are some serious limitations to this approach. Until relatively recently, species interactions were ignored, even though a wealth of experimental and correlative evidence has demonstrated that direct and indirect effects of competition, predation, parasitism, mutualism, and commensalism play an importtant role in determining local species composition. At least some of those effects may translate to larger spatial scales, particularly as the ranges of native and non-native species become increasingly mixed. The presence of other species is now being integrated into species distribution modeling. The chief problem is that with a community of S species, there are S-1 potential new predictor variables. Without some understanding of which species typically interact, the models will become too complex and unwieldy, and the number of potentially intercorrelated predictor variables will quickly become too large for the number of observations needed to reasonably fit the models. Perhaps more serious is that, unlike the relationship between climate and species occurrence, pairs of species may reciprocally affect one another's occurrence, so that the natural distinction between a predictor and a response variable becomes blurred.}
+
+\Ntxt{A more serious criticism of the species distribution modeling paradigm is that the "habitat suitability index" that is calculated by MaxEnt (and rescaled over a [0,1] interval) is not a good measure of the probability of species occurrence, which is the variable of interest (). Royle et al. () introduce a formal likelihood model (MaxLike) and demonstrate that it can successfully recover simple linear environmental covariates of occurrence probabilities. When the MaxLike model is applied to several thousands of presence-only BBS records of the Carolina Wrten it accurately recovers the range distribution of this species. When fed to MaxEnt, these same presence-only data give a very different result. MaxEnt appears to over estimate species occurrence outside of the geographic range, but underestimate it within the range. The same qualitative patterns emerge in an analysis of  MaxEnt versus MaxLike performance on much smaller data sets of ant species occurrence in New England. What we don't know yet is whether MaxEnt analyses have systematically over- or under-estimated the possibility of range shifts and extinctions in climate change forecasting models.}
+
+\Ntxt{MaxLike is not the only way to skin this biogeographic cat, and alternative sampling models that explicitly estimate the probability of species occurrence as a function of abiotic (and biotic) variables are currently being developed (). But even with a strong statistical foundation and the inclusion of other species as potential predictor variables, the paradigm of species distribution modeling is still incomplete. If climate change is more extreme than the measured niche of the species, these models will always predict local extinctions.}
+
+Ntxt{But this paradigm ignores the genetic and population structure of species within their geographic range. In order to successfully forecast species range shifts with climate change, two major alternatives need to be investigated: local adaptation and phenotypic plasticity. Either of these mechanisms may be important, but they cannot be understood with species occurrence records and climate variables.}
+
+\Ntxt{In this paper, we sketch out a research proposal that uses the statistical machinery of forecasting models, but modifies them to use with population genetic data (SNPs) that are organized the same way as presence-absence occurrence records. We also propose classic common garden experiments to measure the potential for phenotypic plasticity and transcriptomic expression of genes coding for heat shock proteins. We don't dwell on the theory, but instead focus on proposed methods. Specifically: (1) what new data should be collected? (2) how should they be analyzed? (3) how will the results be used to improve forecasts of species responses to climate change?}
+
 
 Summarize current state of the art, which assumes no species interactions, does not allow for phenotypic response or evolutionary change. Assumes species have constant niches throughout their geographic ranges. Recent ecology letters paper uses SDMs for pop gen data, which seems to be a step in the right direction. More speculative suggestions in Nature paper that John mentioned???
 
@@ -68,5 +78,5 @@ Two or three examples, a few paragraphs each, possibly with some tables or graph
 
 \printbibliography
 
-% need to figure out how to set up bibliography in BibTex. Also, any formatting details for Ecology that we need to be ready for.
+
 \end{document}
