JSG - added draft text to use of genetic data for SDF
Updated bibtex file

--- a/eco-centennial-paper.tex
+++ b/eco-centennial-paper.tex
@@ -1,6 +1,9 @@
 \documentclass{article}
 \usepackage{color}
 
+% page dimensions
+\usepackage[margin=1in]{geometry} % page margins to 1 in
+
 % biblatex for citations
 \usepackage[backend=bibtex, style=ele]{biblatex}
 \addbibresource{eco-centennial-paper.bib}
@@ -47,29 +50,60 @@ We need to study the physiological and phenotypic responses of species across th
 
 \Ntxt{A growing body of evidence suggests that ongoing climate change is affecting populations and assemblages from local () to biogeographic () scales. Such evidence includes shifts in plant phenology (), the unseasonably early onset of migration () and other forms of animal activity(), historically documented expansions () and contractions () of species geographic range boundaries, and small scale changes in abundance (), activity (), phenology (), and species composition () in response to experimental warming treatments ().}
 
-\Ntxt{The collective evidence for such changes is compelling (). However, successfully forecasting and modeling future range shifts based on  climate change projections is a difficult scientific challenge for the next century (). So far, the most successful forecasting paradigm has used species presence records () to model occurrence probabilities as a function of contemporary climate variables (). When projected onto geographic space, these models generate contour maps of the probability of species occurrence in different places. When extrapolated to future climate scenarios, these models forecast potential geographic range shifts (), with some species expanding their ranges as they move poleward () and towards higher elevations (), and others contracting towards extinction () because of a mismatch between future climates and their estimated climatic niches (). Early research focused on consequences for high-latitude assemblages (), where the absolute changes in temperature and climate have been pronounced (). However, recent studies have suggested  that tropical plants and animals may be even more vulnerable to extinction (),  both because they have evolved narrower temperature tolerances (), and because of a "tropical vacuum" () that will be created by the emergence of "no analog" climates in the warmest spots on the planet ().}
+\Ntxt{The collective evidence for such changes is compelling (). However, successfully forecasting and modeling future range shifts based on  climate change projections is a difficult scientific challenge for the next century (). So far, the most successful forecasting paradigm has used species presence records () to model occurrence probabilities as a function of contemporary climate variables (). When projected onto geographic space, these models generate contour maps of the probability of species occurrence in different places. When extrapolated to future climate scenarios, these models forecast potential geographic range shifts (), with some species expanding their ranges as they move poleward () and towards higher elevations (), and others contracting towards extinction () because of a mismatch between future climates and their estimated climatic niches (). Early research focused on consequences for high-latitude assemblages (), where the absolute changes in temperature and climate have been pronounced () \Jtxt{note this study shows greater climate lag in lowland than highland plant communities(Bertrand et al. 2013)}. However, recent studies have suggested  that tropical plants and animals may be even more vulnerable to extinction (),  both because they have evolved narrower temperature tolerances (), and because of a "tropical vacuum" () that will be created by the emergence of "no analog" climates in the warmest spots on the planet ().}
 
 \Ntxt{This existing paradigm is largely data driven: geo-referenced museum records (), range maps (), species lists (), and the results of surveys by ecologists (), land managers (), and citizen scientists () have generated many sets of species occurrence records. Unfortunately, most of these data are "presence-only" and do not include records of species absences, which creates a special statistical challenge (). Along with species presence data, GIS layers of modeled climate variables are widely available on the internet (), and  can be easily downloaded and interpolated to different spatial scales and grain sizes (). Climate data and species occurrence records can be readily combined in MaxEnt (), a comprehensive open-source software application with a convenient graphical interface for entering data, creating forecasting models, and visualizing the results. The availability of MaxEnt software, GIS layers of environmental data, and species occurrence records have fueled a major publication growth industry over the past decade in species distribution forecasting models.}
 
 \Ntxt{But there are some serious limitations to this approach. Until relatively recently, species interactions were ignored, even though a wealth of experimental and correlative evidence has demonstrated that direct and indirect effects of competition, predation, parasitism, mutualism, and commensalism play an importtant role in determining local species composition. At least some of those effects may translate to larger spatial scales, particularly as the ranges of native and non-native species become increasingly mixed. The presence of other species is now being integrated into species distribution modeling. The chief problem is that with a community of S species, there are S-1 potential new predictor variables. Without some understanding of which species typically interact, the models will become too complex and unwieldy, and the number of potentially intercorrelated predictor variables will quickly become too large for the number of observations needed to reasonably fit the models. Perhaps more serious is that, unlike the relationship between climate and species occurrence, pairs of species may reciprocally affect one another's occurrence, so that the natural distinction between a predictor and a response variable becomes blurred.}
 
-\Ntxt{A more serious criticism of the species distribution modeling paradigm is that the "habitat suitability index" that is calculated by MaxEnt (and rescaled over a [0,1] interval) is not a good measure of the probability of species occurrence, which is the variable of interest (). Royle et al. () introduce a formal likelihood model (MaxLike) and demonstrate that it can successfully recover simple linear environmental covariates of occurrence probabilities. When the MaxLike model is applied to several thousands of presence-only BBS records of the Carolina Wrten it accurately recovers the range distribution of this species. When fed to MaxEnt, these same presence-only data give a very different result. MaxEnt appears to over estimate species occurrence outside of the geographic range, but underestimate it within the range. The same qualitative patterns emerge in an analysis of  MaxEnt versus MaxLike performance on much smaller data sets of ant species occurrence in New England. What we don't know yet is whether MaxEnt analyses have systematically over- or under-estimated the possibility of range shifts and extinctions in climate change forecasting models.}
+\Ntxt{A more serious criticism of the species distribution modeling paradigm is that the "habitat suitability index" that is calculated by MaxEnt (and rescaled over a [0,1] interval) is not a good measure of the probability of species occurrence, which is the variable of interest (). Royle et al. () introduce a formal likelihood model (MaxLike) and demonstrate that it can successfully recover simple linear environmental covariates of occurrence probabilities. When the MaxLike model is applied to several thousands of presence-only BBS records of the Carolina Wren it accurately recovers the range distribution of this species. When fed to MaxEnt, these same presence-only data give a very different result. MaxEnt appears to over estimate species occurrence outside of the geographic range, but underestimate it within the range. The same qualitative patterns emerge in an analysis of  MaxEnt versus MaxLike performance on much smaller data sets of ant species occurrence in New England. What we don't know yet is whether MaxEnt analyses have systematically over- or under-estimated the possibility of range shifts and extinctions in climate change forecasting models.}
 
 \Ntxt{MaxLike is not the only way to skin this biogeographic cat, and alternative sampling models that explicitly estimate the probability of species occurrence as a function of abiotic (and biotic) variables are currently being developed (). But even with a strong statistical foundation and the inclusion of other species as potential predictor variables, the paradigm of species distribution modeling is still incomplete. If climate change is more extreme than the measured niche of the species, these models will always predict local extinctions.}
 
-Ntxt{But this paradigm ignores the genetic and population structure of species within their geographic range. In order to successfully forecast species range shifts with climate change, two major alternatives need to be investigated: local adaptation and phenotypic plasticity. Either of these mechanisms may be important, but they cannot be understood with species occurrence records and climate variables.}
+\Ntxt{But this paradigm ignores the genetic and population structure of species within their geographic range. In order to successfully forecast species range shifts with climate change, two major alternatives need to be investigated: local adaptation and phenotypic plasticity. Either of these mechanisms may be important, but they cannot be understood with species occurrence records and climate variables.}
 
-\Ntxt{In this paper, we sketch out a research proposal that uses the statistical machinery of forecasting models, but modifies them to use with population genetic data (SNPs) that are organized the same way as presence-absence occurrence records. We also propose classic common garden experiments to measure the potential for phenotypic plasticity and transcriptomic expression of genes coding for heat shock proteins. We don't dwell on the theory, but instead focus on proposed methods. Specifically: (1) what new data should be collected? (2) how should they be analyzed? (3) how will the results be used to improve forecasts of species responses to climate change?}
+\Ntxt{In this paper, we sketch out a research proposal that uses the statistical machinery of forecasting models, but modifies them to use with population genetic data (SNPs) that are organized the same way as presence-absence occurrence records. We also propose classic common garden experiments to measure the \Jtxt{extent} of phenotypic plasticity \Jtxt{paired with whole-organism gene expression (i.e. transcriptomic) analysis to identify key genes involved in climate adaptation. Finally, we highlight key examples showing how genetic data can be used to infer dispersal distances and rates, which can be used to evaluate the reality of range shifts predicted from strictly ecological species distribution forecasting.}. We don't dwell on the theory, but instead focus on proposed methods. Specifically: (1) what new data should be collected? (2) how should they be analyzed? (3) how will the results be used to improve forecasts of species responses to climate change?}
 
 
 Summarize current state of the art, which assumes no species interactions, does not allow for phenotypic response or evolutionary change. Assumes species have constant niches throughout their geographic ranges. Recent ecology letters paper uses SDMs for pop gen data, which seems to be a step in the right direction. More speculative suggestions in Nature paper that John mentioned???
 
-\Jtxt{Here's an example of a citation using \parencite{ettinger_climate_2013} and this citation with the year only; Thomas et al. \parencite*{thomas_extinction_2004}. It's also possible to have just the author in text with year following   \textcite{aitken_assisted_2013}. }
+\Jtxt{Here's an example of a citation using \parencite{ettinger2013} and this citation with the year only; Thomas et al. \parencite*{thomas2004}. It's also possible to have just the author in text with year following   \textcite{aitken2013}. }
 
  \Jtxt{The bibtex file \emph{eco-centennial-paper.bib} is in the same directory and the \textbf{bibtexkey} is the string used to specifify a citation.}
 
-\section*{Transcriptomics and Proteomics}
-Describe how these tools can be used to create a true \emph{forecasting} model. What are the precise experiments and measurements we need to forecast how a species range is going to change? Genetic variation across the range? Estimates of heritability? Measurements of variation in heat shock proteins? How can do this operationally in a way that is better than SDMs? Flow chart or graphic for what is to be measured, how to analyze it, and how to forecast range shifts (or lack thereof).
+
+Describe how these tools can be used to create a true \emph{forecasting} model. What are the precise experiments and measurements we need to forecast how a species range is going to change? Genetic variation across the range? Estimates of heritability? Measurements of variation in heat shock proteins? How can do this operationally in a way that is better than SDMs? Flow chart or graphic for what is to be measured, how to analyze it, and how to forecast range shifts (or lack thereof).	
+
+\section*{Population distribution forecasting}
+
+\Jtxt{Species distribution forecasting is performed at the the broad scale of entire species, yet evidence for substantial local adaptation within species (hereford, leimu) questions the utility of this practice. Genetic data can be used to identify distinct genetic demes, that is, groups of individuals connected by contemporary gene flow, that do respond directly to changing environmental conditions. By applying forecasting to these groups, we can come to a better understanding if certain regions of a species range will expand or contract, and which populations are likely to be the sources for range expansion and local persistence....some populations may expand their distributions while others go extinct. Use species distribution forecasting on genetic demes rather than species...allows modeling of both presence and absence data...}
+
+\Jtxt{Key study - \textcite{banta2012}. Applies SDM to individual genotypes of the of the model system \emph{Arabidopsis thaliana}. Genotypes were selected based on differences in flowering.  }
+
+\Jtxt{While SDM based on demes or genotypes will give increased resolution on changes in species distribution and abundance, it still relies upon two assumptions. First, that species are not dispersal limited, and second, that range shifts are more likely than \emph{in situ} adaptation. Both of these assumptions can be evaluated more fully using genetic data.} 
+
+\section*{Dispersal}
+
+\Jtxt{Dispersal is notoriously difficult to esimate because of the long-tail and importance of rare events. Genetic data can be used to infer the directionality and rate of dispersal. The field of landscape genetics evaluates with paths are the most likely routes of dispersal. This information can be used to evaluate if the predictions from SDF are within the constraints of the dispersal parameters, assuming that dispersal does not change with the climate}.
+
+\Jtxt{Key study - \textcite{berthouly-salazar2013} evaluate genetic variation in invasive range of European starling in South Africa }
+
+\section*{Evolutionary rescue}
+
+\Jtxt{Species distribution forecasts assume niche conservatism through tracking favourable environmental conditions. Yet numerous studies demonstrate the potential for rapid adaptation in response to environmental change (Antonovics, Davis and Shaw, Franks). In fact, given extensive habitat fragmentation (...) and the rapid rate of climate change (...), many species may be unable to track their climate envelopes, thereby further depending on adaptation than range shifts as a response to future climate change. Their future persistence will depend on their phenotypic plasticity and adaptive potential (e.g. evolutionary rescue). Genomic data, in combination with organismal studies, can provide insight on both of these factors.}
+
+\subsection*{Transcriptomics}
+
+\Jtxt{Transcriptomics - identify genes involved in adaptation (Barshis et al. 2013 PNAS 'Genomic basis for coral resilience to climate change'). Can screen populations for adaptive alleles.}
+
+\subsection*{Genomic prediction}
+
+\Jtxt{Transcriptomic and genome-wide association studies only identify candidates of large effect -  much of the known heritability for these traits was not explained by the identified genes. This 'missing heritability' has been much debated in the literature, and is primarily ascribed to lack of power in GWA studies to identify many loci of individually small-effect (Yang...), though others argue for a role of epigenetics (...) and epistasis (...). }
+
+\Jtxt{Rather than targeting specific genes, can borrow the approach of "genomic prediction" from the plant and animal breeding literature. Use genome-wide markers, in combination with phenotypic data, to infer the \emph{adaptive potential} of a population. Can thus determine if populations have the genetic variation necessary to adapt to climate change or will depend on migration. }
+
+\Jtxt{ Local adaptation within a species...  Paradigm in restoration ecology of "Local is best" unlikely to apply to future scenarios. Use genomic prediction methods to infer the evolutionary potential of a population. Used with great success in plant and animal breeding...doesn't require knowledge of any specific relatedness among individuals or the genetic basis of climate adaptation, but provides insight on the potential for populations to evolve}
+
 
 \section*{Case Studies}
 Two or three examples, a few paragraphs each, possibly with some tables or graphs. Not sure yet whether to include our own stuff...
